# business-database

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  README.md  compare_courts.py  courts.csv  docker-compose.yml  dodatkowe informacje o Dłużniku.md  pyproject.toml  requirements.txt  ui_metadata.sql  wikipedia_courts.txt
db/: 001_create_entity_tables.sql  002_drop_status_column.sql  003_drop_legal_nature.sql  003_remove_status_column.sql  005_add_business_name_to_physical_persons.sql  db_full_dump.sql  full_dump.dump  full_dump.sql  schema.sql
db/migrations/: 20260115_create_courts.sql  20260307_populate_regional_courts.sql
lawfirm_cli/: __init__.py  commands.py  company_names.py  db.py  entities.py  main.py  metadata.py  prompts.py  render.py  schema.py
lawfirm_cli/registry/: __init__.py  ceidg_client.py  krs_client.py  models.py  proposals.py  storage.py  ui.py
scripts/: collect_regional_courts.py  regional_courts_data.json
tests/: __init__.py  conftest.py  test_ceidg.py  test_cli.py  test_company_names.py  test_entities.py  test_metadata.py  test_registry_cli.py  test_registry_normalization.py  test_registry_proposals.py  test_registry_storage.py  test_schema.py
tests/fixtures/: ceidg_sample.json  ceidg_v3_minimal.json  ceidg_v3_sample.json  ceidg_v3_suspended.json  krs_sample.json
tests/sql/: test_courts.sql
