[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "lawfirm-cli"
version = "0.1.0"
description = "Law firm master data management CLI"
requires-python = ">=3.10"
dependencies = [
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "click>=8.0",
    "rich>=13.0",
    "requests>=2.31",
]

[project.scripts]
legaldb = "lawfirm_cli.commands:main"

[tool.setuptools.packages.find]
include = ["lawfirm_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
